homework 1 added,  fixed T/F bug in lecture notes 2

--- a/lectures/02-prop.tex
+++ b/lectures/02-prop.tex
@@ -112,7 +112,7 @@ We define the ways in which propositions, connectives, and formulas can be synta
   F \bebecomes \bot \alternative \top \alternative p \alternative \lnot F \alternative F\land G \alternative F\lor G \alternative F\limply G \alternative F \lbisubjunct G
   \]
 \end{definition}
-In Definition~\ref{def:proplog-grammer}, $\bot$ and $\top$ stand for the constants true and false, respectively. 
+In Definition~\ref{def:proplog-grammer}, $\bot$ and $\top$ stand for the constants false and true, respectively. 
 The way to read such a grammar is as follows:
 \begin{itemize} 
   \item The Boolean constants $\bot$ and $\top$ are formulas.
