fixed bug in lecture 2 example proof

--- a/lectures/02-prop.tex
+++ b/lectures/02-prop.tex
@@ -501,8 +501,8 @@ Enough said. Let's prove formula \rref{eq:ex1} in sequent calculus:
   } {
     \lsequent{}{(p \limply q) \limply \lnot p \lor q}
   }
-  !\linfer[implyl] {
-    \linfer[implyl] {
+  !\linfer[implyr] {
+    \linfer[implyr] {
       \linfer[orl] {
         \linfer[notl] {
           \linfer[id]{\lclose}{\lsequent{p}{p,q}}
